--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carlosorozco/ui5Extra",
+  "name": "@carlosorozco/ui5-extra",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
