--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ts-typecheck": "tsc --noEmit",
     "lint:src": "eslint src",
     "lint:test": "eslint test",
-    "lint": "run-s lint:src lint:test"
+    "lint": "run-s lint:src lint:test",
+    "docs": "typedoc --options typedoc.json"
   },
   "devDependencies": {
     "@babel/cli": "7.21.0",
@@ -49,6 +50,8 @@
     "karma-cli": "2.0.0",
     "karma-ui5": "3.0.2",
     "npm-run-all": "4.1.5",
+    "typedoc": "^0.24.6",
+    "typedoc-plugin-markdown": "^3.15.2",
     "typescript": "5.0.4",
     "ui5-middleware-livereload": "0.8.2",
     "ui5-middleware-simpleproxy": "^0.9.6"
