--- a/package.json
+++ b/package.json
@@ -37,24 +37,22 @@
     "@babel/core": "7.21.4",
     "@babel/preset-env": "7.21.4",
     "@babel/preset-typescript": "7.21.4",
-    "@sapui5/ts-types-esm": "1.113.0",
     "@types/openui5": "1.113.0",
-    "@typescript-eslint/eslint-plugin": "5.59.0",
-    "@typescript-eslint/parser": "5.59.0",
-    "@ui5/cli": "3.0.7",
+    "@typescript-eslint/eslint-plugin": "5.59.1",
+    "@typescript-eslint/parser": "5.59.1",
+    "@ui5/cli": "3.1.1",
     "@ui5/ts-interface-generator": "0.5.5",
     "babel-preset-transform-ui5": "7.1.4",
-    "eslint": "8.38.0",
-    "karma": "6.4.1",
+    "eslint": "8.39.0",
+    "karma": "6.4.2",
     "karma-chrome-launcher": "3.2.0",
     "karma-cli": "2.0.0",
-    "karma-ui5": "3.0.2",
+    "karma-ui5": "3.0.3",
     "npm-run-all": "4.1.5",
-    "typedoc": "^0.24.6",
-    "typedoc-plugin-markdown": "^3.15.2",
+    "typedoc": "0.24.6",
     "typescript": "5.0.4",
     "ui5-middleware-livereload": "0.8.2",
-    "ui5-middleware-simpleproxy": "^0.9.6"
+    "ui5-middleware-simpleproxy": "0.9.6"
   },
   "ui5": {
     "dependencies": [
