--- a/.github/workflows/generateDocs.yml
+++ b/.github/workflows/generateDocs.yml
@@ -4,7 +4,7 @@ name: GenerateDocs
 on: [push, pull_request]
 
 jobs:
-  build_and_lint:
+  generate_docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
@@ -22,10 +22,10 @@ jobs:
 
       - name: Install dependencies (if the cached directory was not found)
         if: steps.node-cache.outputs.cache-hit != 'true'
-        run: npm ci
+        run: npm i
 
       - name: Create the docs directory locally in CI
-        run: npx run docs
+        run: npm run docs
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
