--- a/.github/workflows/generateDocs.yml
+++ b/.github/workflows/generateDocs.yml
@@ -1,34 +1,24 @@
-# ci.yml file for GitHub Actions
-name: GenerateDocs
-
-on: [push, pull_request]
-
+name: Generate docs
+on:
+  push:
+    branches:
+      - main
+permissions:
+  contents: write
 jobs:
-  generate_docs:
+  generate-docs:
+    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-
-      - name: Retrieve the cached "node_modules" directory (if present)
-        uses: actions/cache@v2
-        id: node-cache
-        with:
-          path: node_modules
-          key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
-
-      - name: Install dependencies (if the cached directory was not found)
-        if: steps.node-cache.outputs.cache-hit != 'true'
-        run: npm i
-
-      - name: Create the docs directory locally in CI
-        run: npm run docs
+      - name: Install Typedoc and build docs
+        run: |
+          npm i typedoc
+          npm run docs
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
           folder: docs
