--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -10,7 +10,8 @@
     "start": "ui5 serve --port 8080 -o index.html",
     "start:dist": "ui5 serve  --port 8080 -o index.html --config ui5-dist.yaml",
     "ts-typecheck": "tsc --noEmit",
-    "lint": "eslint webapp"
+    "lint": "eslint webapp",
+    "i": "sui-mono run npm install"
   },
   "ui5": {
     "dependencies": [
@@ -18,7 +19,7 @@
     ]
   },
   "devDependencies": {
-    "@carlosorozco/ui5Extra": "../",
+    "@carlosorozco/ui5Extra": "../ui5-extra",
     "@types/openui5": "1.113.0",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
@@ -26,7 +27,7 @@
     "eslint": "8.39.0",
     "typescript": "5.0.4",
     "ui5-middleware-livereload": "0.8.2",
-    "ui5-middleware-simpleproxy": "0.9.6",
+    "ui5-middleware-simpleproxy": "0.9.7",
     "ui5-tooling-transpile": "0.7.8"
   }
 }
