--- a/.github/workflows/generateDocs.yml
+++ b/.github/workflows/generateDocs.yml
@@ -13,19 +13,23 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install Typedoc and build docs
+      - name: Install Dependencies
         run: |
           npm i
-          npm run docs
 
       - name: Build library
+        working-directory: ./packages/ui5-extra
         run: |
           npm run build
 
-      - name: Build UI5 App Samples
-        working-directory: ./app
+      - name: Build Docs
+        working-directory: ./packages/ui5-extra
         run: |
-          npm i
+          npm run docs
+
+      - name: Build UI5 App Samples
+        working-directory: ./packages/samples
+        run: |
           npm run build:opt
 
       - name: Deploy 🚀
