--- a/packages/samples/ui5.yaml
+++ b/packages/samples/ui5.yaml
@@ -1,6 +1,6 @@
 specVersion: '3.0'
 metadata:
-  name: ui5.typescript.helloworld
+  name: ui5-extra-samples
 type: application
 framework:
   name: OpenUI5
