--- a/packages/ui5-extra/package.json
+++ b/packages/ui5-extra/package.json
@@ -5,6 +5,7 @@
   "author": "CarlosOrozco88",
   "license": "Apache-2.0",
   "homepage": "https://github.com/CarlosOrozco88/ui5-extra#README",
+  "types": "types/index.d.ts",
   "scripts": {
     "build": "run-s build:ts build:test-ts build:ui5",
     "build:ts": "babel src --out-dir src-gen --extensions \".ts,.js\" --copy-files --include-dotfiles",
