chore(packages/ui5-extra): fix tsconfig and Toast.js to Toast.ts

--- a/packages/ui5-extra/tsconfig.json
+++ b/packages/ui5-extra/tsconfig.json
@@ -8,5 +8,5 @@
       "dev/carlosorozco/ui5Extra/*": ["./src/dev/carlosorozco/ui5Extra/*"]
     }
   },
-  "include": ["src", "types"]
+  "include": ["src", "test", "types"]
 }
