--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "packages/*"
   ],
   "scripts": {
-    "commit": "sui-mono commit",
-    "check": "sui-mono check"
+    "cm": "sui-mono commit",
+    "ch": "sui-mono check"
   },
   "devDependencies": {
     "@s-ui/mono": "2.34.0"
