chore(Root): fixed docs generation

--- a/apps/samples/package.json
+++ b/apps/samples/package.json
@@ -5,10 +5,10 @@
   "author": "SAP SE",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "ui5 build --clean-dest --dest ../../docs/app",
-    "build:opt": "ui5 build self-contained --dest ../../docs/app --clean-dest --all",
+    "build": "ui5 build --clean-dest --dest ../../docs",
+    "build:opt": "ui5 build self-contained --dest ../../docs --clean-dest --all",
     "start": "ui5 serve --port 8080 -o index.html",
-    "start:dist": "ui5 serve  --port 8080 -o index.html --config ui5-dist.yaml",
+    "start:dist": "ui5 serve --port 8080 -o index.html --config ui5-dist.yaml",
     "ts-typecheck": "tsc --noEmit",
     "lint": "eslint webapp"
   },
