--- a/libraries/ui5-cc-extra-twostepbutton/ui5.yaml
+++ b/libraries/ui5-cc-extra-twostepbutton/ui5.yaml
@@ -12,6 +12,9 @@ framework:
   libraries:
     - name: sap.ui.core
     - name: sap.m
+    - name: themelib_sap_belize
+    - name: themelib_sap_fiori_3
+    - name: themelib_sap_horizon
 server:
   customMiddleware:
     - name: ui5-tooling-transpile-middleware
