docs(apps/samples): fixed samples app navigation

--- a/apps/samples/webapp/manifest.json
+++ b/apps/samples/webapp/manifest.json
@@ -76,7 +76,7 @@
       "routes": [
         {
           "pattern": "",
-          "name": "master",
+          "name": "Main",
           "target": ["master", "main"]
         },
         {
