--- a/libraries/ui5-cc-extra-stepbutton/src/ui5Extra/StepButton/manifest.json
+++ b/libraries/ui5-cc-extra-stepbutton/src/ui5Extra/StepButton/manifest.json
@@ -1,6 +1,6 @@
 {
   "sap.app": {
-    "id": "ui5Extra.TwoStepButton",
+    "id": "ui5Extra.StepButton",
     "type": "library",
     "applicationVersion": {
       "version": "${version}"
