--- a/libraries/ui5-cc-extra-stepbutton/ui5.yaml
+++ b/libraries/ui5-cc-extra-stepbutton/ui5.yaml
@@ -1,6 +1,6 @@
 specVersion: '3.0'
 metadata:
-  name: 'ui5extra_twostepbutton'
+  name: 'ui5extra_stepbutton'
 type: library
 resources:
   configuration:
@@ -12,9 +12,6 @@ framework:
   libraries:
     - name: sap.ui.core
     - name: sap.m
-    - name: themelib_sap_belize
-    - name: themelib_sap_fiori_3
-    - name: themelib_sap_horizon
 server:
   customMiddleware:
     - name: ui5-tooling-transpile-middleware
