chore(Root): monorepo eslint tsconfig

--- a/apps/samples/webapp/manifest.json
+++ b/apps/samples/webapp/manifest.json
@@ -42,7 +42,7 @@
         "ui5Extra.ODataFetch": {},
         "ui5Extra.Text": {},
         "ui5Extra.Toast": {},
-        "ui5Extra-StepButton": {}
+        "ui5Extra.StepButton": {}
       }
     },
     "resources": {
