--- a/apps/samples/package.json
+++ b/apps/samples/package.json
@@ -18,6 +18,7 @@
     "@carlosorozco/ui5-cc-extra-toast": "*",
     "@carlosorozco/ui5-cc-extra-stepbutton": "*",
     "@carlosorozco/eslint-config-custom": "*",
+    "@carlosorozco/tsconfig": "*",
     "ui5-middleware-livereload": "0.8.2",
     "ui5-middleware-simpleproxy": "0.9.7",
     "ui5-tooling-modules": "0.9.8",
