--- a/libraries/ui5-cc-extra-odatafetch/.eslintrc.json
+++ b/libraries/ui5-cc-extra-odatafetch/.eslintrc.json
@@ -1,4 +1,8 @@
 {
   "root": true,
-  "extends": ["custom"]
+  "extends": ["custom"],
+  "parserOptions": {
+    "project": ["./tsconfig.json"],
+    "sourceType": "module"
+  }
 }
