--- a/libraries/ui5-cc-extra-text/tsconfig.json
+++ b/libraries/ui5-cc-extra-text/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@carlosorozco/tsconfig/base.json",
   "compilerOptions": {
     "rootDir": "./",
     "outDir": "./src-gen",
