--- a/libraries/ui5-cc-extra-toast/package.json
+++ b/libraries/ui5-cc-extra-toast/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@carlosorozco/eslint-config-custom": "*",
+    "@carlosorozco/tsconfig": "*",
     "ui5-middleware-livereload": "0.8.2",
     "ui5-tooling-modules": "0.9.8",
     "ui5-tooling-transpile": "0.7.8"
