--- a/libraries/ui5-cc-extra-toast/package.json
+++ b/libraries/ui5-cc-extra-toast/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@carlosorozco/ui5-cc-extra-toast",
+  "name": "@ui5extra/ui5-cc-toast",
   "version": "0.0.1",
   "description": "",
   "author": "CarlosOrozco88",
